[package]
name = "syntect-yew"
version = "0.2.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "mast ast for basic arithmetic operations"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/GalAster/math-ast"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"



[lib]
crate-type = ["cdylib", "rlib"]
